--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "moment": "^2.18.1"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
+    "mocha": "^4.0.1",
     "nodemon": "^1.12.1"
   }
 }
