--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
+    "eslint": "^4.8.0",
+    "eslint-config-google": "^0.9.1",
     "mocha": "^4.0.1",
     "nodemon": "^1.12.1"
   }
