--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "mocha"
+    "test": "mocha",
+    "lint": "eslint ./{,**/}*.js"
   },
   "repository": {
     "type": "git",
