--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon index.js",
     "test": "mocha",
-    "lint": "eslint ./{,**/}*.js"
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
